Update nuget flow to only do full releases

--- a/.github/workflows/DataMiner+CICD+Internal+Nuget+Solution.yml
+++ b/.github/workflows/DataMiner+CICD+Internal+Nuget+Solution.yml
@@ -1,9 +1,7 @@
 name: DataMiner CICD Internal Nuget Solution
 on:
   push:
-    branches:
-    - main
-    - master
+    branches: []
     tags:
     - '[0-9]+.[0-9]+.[0-9]+-[0-9a-zA-Z]+'
   workflow_dispatch: 
